--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "bootstrap": "3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
