--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^1.6.4",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-flexbox-grid": "^2.1.2",
     "react-ga": "^3.3.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
